# gitsight

./: .gitignore  README.md  pyproject.toml
gitsight/: __init__.py  analysis.py  cli.py  config.py  export.py  git.py  hotfiles.py  renderer.py  stats.py  timeline.py  vectors.py
tests/: test_export.py  test_git.py  test_vectors.py
